2006-03-14  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c (parse_short_option): Don't create the
	option_name twice.  (#334519, Chris Wilson)

2006-03-13  Anders Carlsson  <andersca@luminoth.local>

	* configure.in: Revert fix for #322476, it breaks module loading
	since libtool on darwin makes shared modules use .so and shared
	libraries use .dylib. The fix breaks shared module loading everywhere
	in GTK+.

2006-03-02  Marcus Brinkmann  <mb@g10code.de>

	Implement watches for GIOChannels for write file descriptors on
	Win32 (#333098).
	
	* glib/giowin32.c (GIOWin32Channel): Add a new direction field.
	(read_thread): Initialize direction.
	(write_thread): New function.
	(buffer_write): New function.
	(g_io_win32_prepare): Handle the G_IO_WIN32_FILE_DESC case for the
	write direction.
	(g_io_win32_fd_write): Call buffer_write() if there is a writer
	thread.
	(g_io_win32_fd_close): Set space_avail_event for writer threads.
	(g_io_win32_fd_create_watch): Create the writer thread if
	condition is G_IO_OUT.
	(g_io_channel_win32_make_pollfd): Likewise here.

2006-03-09  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am: Add ChangeLog.pre-2.8 to EXTRA_DIST.

2006-03-08  Tor Lillqvist  <tml@novell.com>

	* glibconfig.h.win32.in: Add G_GUINT64_CONSTANT.

2006-03-07  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* ===  Released 2.10.1 ===

	* NEWS: Updates.

	* glib/gutf8.c (_g_charset_get_aliases): Match the prototype
	in gconvert.c to fix build problems in NetBSD.  (#333651,
	Julio M. Merino Vidal)

2006-03-06  Anders Carlsson  <andersca@imendio.com>

	* configure.in:
	Make .dylib the shared library suffix on darwin.
	(#322476, Vladimir Panov)
	
2006-03-06  Anders Carlsson  <andersca@imendio.com>

	* configure.in:
	Skip checking thread flags on Darwin. Fix suggested by Manish Singh.
	(#314794, Gregor Riepl)
	
2006-03-01  Tor Lillqvist  <tml@novell.com>

	* glib/gutils.c (g_listenv): Separate implementation on Win32: Use